  * Initial implementation of Mediawiki parser functions including
    anchorencode, filepath, fullurl, localurl, lc, lcfirst, uc, ucfirst and
    urlencode.
  * Add support for the {{SITENAME}} and {{SERVER}} magic words.
  * Allow nesting of templates ("{{template1|content={{template2}}}}").
  * Support categories on #REDIRECT pages to match Mediawiki.
  * Updated spam filter patterns.
  * Upgrade to Lucene Search 2.4.0.
  * Upgrade to Spring Framework 2.5.6.
  * Upgrade to Spring Security 2.0.4.

Bugfixes:

  * Fix category pagination when using MS SQL (hanspeterklapf).
  * Fix broken links to Lucene search help on the search page (hanspeterklapf).
  * Ensure that URI parameters of the form ";jsessionid=1234" are not included
    in topic names.  Affects Jetty and possibly other containers, reported by
    spiralmike.
  * Use a default MIME type of "application/unknown" for file uploads without
    MIME types to prevent database errors.  Reported by Tim.
  * Fix incorrect paragraph parsing when there is a blank line containing
    one or more whitespace characters between the paragraphs.  Reported by
    James Teer.
  * Fix parsing of multiple newlines to match Mediawiki.
  * Fix parsing of links containing parantheses such as
    http://example.com/page_(page).  Reported by  Michael Habbert.
  * Fix parsing of nested tags of the form <tt><tt>test</tt></tt> which were
    producing an extra closing tag.

Translation Updates:

  * Added Portugese (Brazilian) translations (leandes).
  * Updated Chinese translations (hfl).
  * Updated German translations (axelclk).


0.6.7
=====

New Features:

  * None

Bugfixes:

  * JDK 1.6 and greater changed the behavior of the JDBC getColumnName() method
    causing the watchlist tab to break.  Fix suggested by Luc.
  * Virtual wiki default topics with spaces were incorrectly being stored with
    spaces converted to underscores ("Main_Page" instead of "Main Page").